--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
 logs
 project/project
 project/target
@@ -14,4 +27,4 @@ dist
 /RUNNING_PID
 /.settings
 /.target
-.checkstyle
+*.checkstyle
