--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,8 +40,8 @@ application.langs="en"
 #
 db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:play;MODE=PostgreSQL"
-#db.default.user="test"
-#db.default.password="test"
+db.default.user="test"
+db.default.password="test"
 
 #db.default.driver=com.mysql.jdbc.Driver
 #db.default.url="jdbc:""mysql://localhost/surferpedia?characterEncoding=UTF-8"
