--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,8 +3,8 @@
 
 # Define admin credentials
 
-surferpedia.admin.email=${?SURFERPEDIA_ADMIN_EMAIL}
-surferpedia.admin.password=${?SURFERPEDIA_ADMIN_PASSWORD}
+#surferpedia.admin.email=${?SURFERPEDIA_ADMIN_EMAIL}
+#surferpedia.admin.password=${?SURFERPEDIA_ADMIN_PASSWORD}
 
 # Secret key
 # ~~~~~
